<resources>
    <string name="app_name">Garden App</string>
    <string name="title_activity_main_screen">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">My Plants</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome">Welcome</string>
    <string name="plants">My Plants</string>
    <string name="notification">Notifications</string>
    <string name="find_plants">Find Plants</string>
    <string name="button_add_plants">Add Plants</string>
    <string name="image_of_hands_holding_plants">image_of_hands_holding_plants</string>
    <string name="android_version">Android Version</string>
    <string name="android_name">Android Name</string>
    <string name="plant_name" />
    <string name="plant_type" />
    <string name="placeholderimage" />
    <string name="image_background_for_login_page">Image background for login page</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="close">Close</string>
    <string name="sign_out">Sign Out</string>
    <string name="not_currently_in_use" />
    <string name="fertilizer">fertilizer</string>
    <string name="name">name</string>
    <string name="notes">notes</string>
    <string name="pet_friendly">pet Friendly</string>
    <string name="scientific_name">scientific name</string>
    <string name="sunlight">sunlight</string>
    <string name="type">type</string>
    <string name="water_amount">water amount</string>
    <string name="water_frequency">water frequency</string>
    <string name="show">Show</string>
    <string name="save">Save</string>
    <string name="image_of_selected_plant">image of selected plant</string>
    <string name="name_of_plant">Name of Plant</string>
    <string name="sunshine_needed">Sunshine Needed</string>
    <string name="last_watered">Last Watered</string>
    <string name="is_pet_friendly">Is Pet Friendly</string>
    <string name="todo">Image of Plant</string>
    <string name="image_of_plant" />
    <string name="table_with_plants_and_watering_spout">Table with plants and watering spout</string>
    <string name="last_date_plant_watered">Last Date Plant Watered</string>
    <string name="last_date_watered">Last Date Watered</string>
    <string name="plant_nick_name">Plant Nick Name</string>
    <string name="date_plant_watered">Date Plant Watered</string>
    <string name="register">Register</string>

    <string name="name_placeholder">Name:</string>
    <string name="scientific_name_placeholder">Scientific Name:</string>
    <string name="water_amount_placeholder">Water Amount:</string>
    <string name="water_frequency_placeholder">Water Frequency:</string>
    <string name="sunlight_placeholder">Sunlight:</string>
    <string name="fertilizer_placeholder">Fertilizer:</string>
    <string name="pet_friendly_placeholder">Pet Friendly:</string>
    <string name="plant_type_placeholder">Plant Type:</string>
    <string name="notes_placeholder">Notes:</string>
    <string name="what_do_you_want_to_call_your_plant">What do you want to call your plant?</string>
    <string name="when_was_the_last_time_you_watered_this_plant">How often (in days) will you water this plant?</string>
    <string name="plant_info">Plant Info</string>
    <string name="user_info">User Info</string>
    <string name="signout">Signout</string>
    <string name="register_name">Name</string>
    <string name="already_have_an_account">Already Have An Account</string>
    <string name="plantTip">Plant Tip</string>
    <string name="today_s_plant_tip">Your Daily Gardening Tip:</string>
    <string name="nickname">nickname</string>
    <string name="next_water_date">Next Water Date</string>
    <string name="last_time_watered">Last time Watered</string>
    <string name="today">Today</string>
</resources>